--- a/css/_experienceExpertise.scss
+++ b/css/_experienceExpertise.scss
@@ -8,11 +8,25 @@
         max-width: 1200px;
         margin: auto;
         padding: 50px;
+        @media screen and (max-width: 980px) {
+            flex-direction: column;
+            padding: 25px 50px;
+        }
+        @media screen and (max-width: 340px) {
+            padding: 25px 25px;
+        }
 
         .experienceExpertise__text {
             margin: auto;
             padding-right: 100px;
             width: 50%;
+            @media screen and (max-width: 1140px) {
+                padding-right: 20px;
+            }
+            @media screen and (max-width: 980px) {
+                width: 100%;
+                margin-bottom: 50px;
+            }
 
             .experienceExpertise__title {
                 font-family: "CompassDisplay-Regular";
@@ -33,19 +47,46 @@
             .experienceExpertise__details {
                 display: flex;
                 flex-direction: column;
+                @media screen and (max-width: 540px) {
+                    flex-direction: row;
+                }
 
                 .experienceExpertise__detail {
                     display: flex;
                     justify-content: space-between;
                     margin-bottom: 25px;
+                    @media screen and (max-width: 540px) {
+                        flex-direction: column;
+                    }
 
                     .experienceExpertise__exp {
                         @include styleExperienceDetails;
-                        margin-right: 30px
+                        margin-right: 30px;
+                        @media screen and (max-width: 540px) {
+                            text-align: left;
+                            margin-right: 20px;
+                            margin-bottom: 30px;
+                        }
+                        h3 {
+                            @media screen and (max-width: 540px) {
+                                text-align: left;
+                            }
+                        }
+                        
                     }
 
                     .experienceExpertise__awards {
-                        @include styleExperienceDetails; 
+                        @include styleExperienceDetails;
+                        @media screen and (max-width: 540px) {
+                            text-align: left;
+                            margin-right: 20px;
+                        }
+                        h3 {
+                            @media screen and (max-width: 540px) {
+                                text-align: left;
+                            }
+                        }
+                        
                     }
                 }
                 
@@ -53,13 +94,29 @@
                     display: flex;
                     justify-content: space-between;
                     margin-bottom: 25px;
+                    @media screen and (max-width: 540px) {
+                        flex-direction: column;
+                    }
 
                     .experienceExpertise__producing {
                         @include styleExperienceDetails;
-                        margin-right: 30px
+                        margin-right: 30px;
+                        margin-bottom: 30px;
+                        h3 {
+                            @media screen and (max-width: 540px) {
+                                text-align: left;
+                            }
+                        }
+                        
                     }
                     .experienceExpertise__ranked {
                         @include styleExperienceDetails;
+                        h3 {
+                            @media screen and (max-width: 540px) {
+                                text-align: left;
+                            }
+                        }
+                        
                     }
                 }
             }
@@ -88,6 +145,9 @@
 
         .experienceExpertise__img {
             width: 50%;
+            @media screen and (max-width: 980px) {
+                display: none;
+            }
 
             .experienceExpertise__thumb {
                 width: 100%;
@@ -108,11 +168,13 @@
         .experienceExpertise__thumbs {
             display: flex;
             justify-content: space-evenly;
-            /* width: 90%; */
+            width: 100%;
+            flex-wrap: wrap;
             
             .experienceExpertise__thumb {
                 vertical-align: top;
-                transform: scale(.9);
+                width: 10%;
+                transform: scaleX(1.5);
             }
         }
     }
