--- a/css/_testimonials.scss
+++ b/css/_testimonials.scss
@@ -3,6 +3,18 @@
     margin: auto;
     display: flex;
     position: relative;
+    @media screen and (max-width: 1190px) {
+        &::after {
+            display: none;
+        }
+    }
+    @media screen and (max-width: 945px) {
+        flex-direction: column;
+        padding: 0px 10%;
+    }
+    @media screen and (max-width: 650px) {
+        width: 120%;
+    }
 
     .testimonials__title {
         font-family: "CompassDisplay-Regular";
@@ -12,6 +24,13 @@
         line-height: 72px;
         color: #333333;
         padding: 50px;
+        @media screen and (max-width: 945px) {
+            padding: 30px 0 0 0;
+        }
+        @media screen and (max-width: 400px) {
+            font-size: 2.8rem;
+            padding: 50px 0 0 0;
+        }
     }
     &:after {
         content: '';
@@ -28,6 +47,12 @@
         display: flex;
         flex-direction: column;
         padding: 50px 100px 100px 100px;
+        @media screen and (max-width: 990px) {
+            padding: 30px 100px 100px 0px;
+        }
+        @media screen and (max-width: 400px) {
+            padding: 15px 100px 100px 0px;
+        }
 
         .testimonials__wrapper {
             
@@ -46,6 +71,9 @@
                     font-weight: 600;
                     display: inline-block;
                     margin-bottom: 50px;
+                    @media screen and (max-width: 400px) {
+                        margin-bottom: 25px;
+                    }
                 }
             }
         }
