--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,7 +11,7 @@ header {
     .navBar {
         width: 100%;
         display: flex;
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
         justify-content: space-around;
         padding-top: 10px;
         padding-bottom: 10px;
@@ -26,12 +26,14 @@ header {
             
             .navBar__thumb {
                 /* position: relative; */
-                transform: scale(.9);
+                /* transform: scale(.9); */
+                width: 80%;
                 @media screen and (max-width: 510px) {
-                    transform: scale(.7);
+                    /* transform: scale(.7); */
+                    width: 70%;
                 }
                 @media screen and (max-width: 480px) {
-                    transform: scale(.5);
+                    /* transform: scale(.5); */
                 }
                 /* &.navBar__thumb--line {
                     &::after {
@@ -54,8 +56,12 @@ header {
             visibility: hidden;
             cursor: pointer;
             font-size: 3rem;
+            padding-right: 2%;
             @media screen and (max-width: 1474px) {
                 visibility: visible;
+            }
+            @media screen and (max-width: 510px) {
+                font-size: 2.5rem;
             }
         }
 
