--- a/css/_header.scss
+++ b/css/_header.scss
@@ -16,6 +16,9 @@ header {
         padding-top: 10px;
         padding-bottom: 10px;
         box-shadow: 0px 2px 4px 0px rgb(73, 72, 72);
+        @media screen and (max-width: 400px) {
+            flex-direction: column;
+        }
 
         .navBar__logosNav {
             display: flex;
@@ -28,13 +31,15 @@ header {
                 /* position: relative; */
                 /* transform: scale(.9); */
                 width: 80%;
-                @media screen and (max-width: 510px) {
-                    /* transform: scale(.7); */
+                @media screen and (max-width: 430px) {
+                    width: 90%;
+                }
+                @media screen and (max-width: 400px) {
+                    width: 50%;
+                }
+                /* @media screen and (max-width: 510px) {
                     width: 70%;
-                }
-                @media screen and (max-width: 480px) {
-                    /* transform: scale(.5); */
-                }
+                } */
                 /* &.navBar__thumb--line {
                     &::after {
                         content: '';
@@ -63,11 +68,21 @@ header {
             @media screen and (max-width: 510px) {
                 font-size: 2.5rem;
             }
+            @media screen and (max-width: 400px) {
+                padding-left: 10px;
+                font-size: 2.5rem;
+            }
         }
 
         .navBar__contenidoNav {
-            display: flex;
-            justify-content: space-between;
+            /* display: flex;
+            justify-content: space-between; */
+            @media screen and (max-width: 1474px) {
+                text-align: center;
+            }
+            @media screen and (max-width: 400px) {
+                text-align: left;
+            }
 
             .navBar__info {
                 display: flex;
@@ -77,6 +92,11 @@ header {
                     display: flex;
                     /* padding-top: 10px; */
                     justify-content: right;
+                    @media screen and (max-width: 1474px) {
+                        display: none;
+                    }
+
+                    ul {}
 
                     li {
                         list-style: none;
@@ -94,6 +114,9 @@ header {
                         display: flex;
                         justify-content: flex-start;
                         align-items: center;
+                        @media screen and (max-width: 1474px) {
+                            display: none;
+                        }
                         
                         .navBar__link {
                             list-style: none;
@@ -109,6 +132,9 @@ header {
                                     border-bottom: 2px solid #000;
                                     transition: all .3s ease-in-out;
                                 }
+                            }
+                            @media screen and (max-width: 400px) {
+                                padding: 5px;
                             }
 
                             a {
@@ -130,6 +156,12 @@ header {
                                 transition: all .3s ease-in-out;
                                 i { color: #ffffff; }
                             }
+                            @media screen and (max-width: 1474px) {
+                                margin: 15px;
+                            }
+                            @media screen and (max-width: 400px) {
+                                margin: 15px;
+                            }
 
                             i {
                                 font-size: 14px;
@@ -145,6 +177,12 @@ header {
                             margin-right: 30px;
                             list-style: none;
                             font-family: "CompassSans-Regular";
+                            @media screen and (max-width: 1474px) {
+                                margin: 15px;
+                            }
+                            @media screen and (max-width: 400px) {
+                                margin: 15px;
+                            }
                             &:hover {
                                 cursor: pointer;
                                 border: 2px solid #000;
@@ -152,18 +190,26 @@ header {
                                 transition: all .3s ease-in-out;
                                 a { color: #000; }
                             }
-
+                            
                             a {
                                 text-decoration: none;
                                 color: #ffffff;
                             }
                         }
                     }
+                    .navBar__listLinks--active {
+                        overflow: visible;
+                        flex-direction: column;
+                        display: block;
+                        @media screen and (max-width: 400px) {
+                            flex-direction: row !important;
+                        }
+                    }
                 }
             }
-            @media screen and (max-width: 1474px) {
-                display: none;
-            }
+            /* @media screen and (max-width: 1474px) {
+                overflow: hidden;
+            } */
         }
     }
 }
