--- a/css/_whatMakesDifferent.scss
+++ b/css/_whatMakesDifferent.scss
@@ -21,6 +21,7 @@
         
         .whatMakesDifferent__video {
             width: 50%;
+            cursor: pointer;
             @media screen and (max-width: 1105px) {
                 width: 125%;
                 margin-bottom: 30px;
